--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.0",
     "node-uuid": "^1.4.7",
     "react": "^15.4.2",
